# multi-agent-rag

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  env.sample  pyproject.toml  vercel.json
.github/workflows/: cd.yml  ci.yml  deploy.yml
docs/: agent-doc.md
rag/compose/local/: Dockerfile  start
rag/src/: main.py
rag/src/agent/: __init__.py  base.py  enums.py  events.py  factory.py  invoice.py  math.py  programming.py  researcher.py  router.py  types.py
rag/src/agent/schemes/: __init__.py  invoice.py  math.py  programming.py  researcher.py
rag/src/agent/states/: __init__.py  invoice.py  math.py  programming.py  researcher.py  router.py
rag/src/agent/tools/: __init__.py  code_execution.py  invoice_tools.py  math_tools.py  vector_search.py  web_search.py
rag/src/api/: dependencies.py
rag/src/api/routes/: agent.py  auth.py  collection.py  conversation.py  documents.py  health_check.py  invoices.py  llm.py  main.py  platform_llm.py
rag/src/api/schemas/: agent.py  auth.py  collection.py  conversation.py  documents.py  llm.py  platform_llm.py
rag/src/common/: agent.py  app.py  auth.py  crypto.py  db.py  llm.py  platform_llm.py  s3.py  settings.py
rag/src/db/: __init__.py  checkpointer.py  embeddings.py  postgres.py  vector_store.py
rag/src/db/alembic/: env.py
rag/src/db/seeds/: platform_llms.sql
rag/src/locales/: en.json  uk.json
rag/src/models/: __init__.py  agent.py  base.py  collection.py  conversation.py  llm.py  message.py  platform_llm.py  refresh_token.py  usage_record.py  user.py
rag/src/prompts/: base_prompt.md  invoice_prompt.md  math_prompt.md  programming_prompt.md  researcher_prompt.md  router_prompt.md
rag/src/prompts/invoice/: extract_details.md  fix_items.md  format_output.md  request_info.md
rag/src/prompts/math/: clarify.md  explain.md  explain_failure.md  parse_problem.md  solve.md  verify.md
rag/src/prompts/programming/: explain.md  explain_failure.md  plan.md  review.md  write_code.md
rag/src/prompts/researcher/: cite_sources.md  plan_queries.md  synthesize.md
rag/src/repositories/: agent.py  base.py  collection.py  conversation.py  llm.py  message.py  platform_llm.py  refresh_token.py  usage_record.py  vector_store.py
rag/src/repositories/sql/: get_collection_files.sql
rag/src/services/: __init__.py  agent.py  agent_streaming.py  auth.py  collection.py  conversation.py  document.py  llm.py  platform_llm.py  prompt.py  s3.py
rag/src/tests/: conftest.py  helpers.py  test_agents.py  test_auth.py  test_auth_service.py  test_collections.py  test_conversations.py  test_health.py  test_llms.py
rag/src/utils/: crypto.py  exceptions.py  i18n.py  parsers.py  unit_of_work.py  ws.py
web/: README.md  package-lock.json  package.json  vercel.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/api/: baseApi.ts
web/src/api/endpoints/: agent.ts  auth.ts  collection.ts  conversation.ts  documents.ts  llm.ts  platform_llm.ts
web/src/api/types/: agent.ts  auth.ts  collection.ts  conversation.ts  documents.ts  llm.ts  platform_llm.ts
web/src/components/: ConfirmDialog.tsx  LoadingScreen.tsx
web/src/components/Chat/: ChatAvatar.tsx  ChatHeader.tsx  ChatInput.tsx  ChatMessage.tsx  ThinkingBubble.tsx
web/src/components/Form/: FormTextField.tsx  SubmitButton.tsx
web/src/components/Layout/: index.tsx
web/src/components/MarkdownRenderer/: index.tsx  preprocessMarkdown.ts
web/src/components/Sidebar/: SectionLabel.tsx  constants.ts  index.tsx
web/src/hooks/: useActions.ts  useAgentChat.ts
web/src/i18n/: index.ts
web/src/i18n/locales/: en.ts  uk.ts
web/src/mocks/: agents.ts  messages.ts  sessions.ts  user.ts
web/src/pagecomponents/Agents/: index.tsx
web/src/router/: ProtectedRoute.tsx  index.tsx  router.ts
web/src/services/: agentChatSocket.ts
web/src/store/: index.ts
web/src/theme/: ThemeContext.tsx  index.ts
web/src/types/: agentChat.ts  chat.tsx  i18n.ts
web/src/utils/: agentGraph.ts  conversation.ts  localStorage.ts
web/src/validation/: agent.ts  auth.ts  collection.ts  llm.ts
(+26 files in other folders)
