[project]
name = "multi-agent-rag-system"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "langchain>=1.2.12",
    "langgraph>=1.1.2",
    "pydantic-settings>=2.0.0",
    "ruff>=0.15.6",
    "sqlalchemy>=2.0.48",
]

[tool.ruff]
line-length = 120
target-version = "py312"
indent-width = 4
lint.ignore = [
    "E501", "B904", "N806", "C901", "C417", "N817", "C414", "F403", "N801", "N818", "RUF005", "RUF012", "RUF015"
]
lint.exclude = [
    'venv', '.git',
    '.idea', '__pycache__',
    '**/migrations/**', 'scripts/',
    '**/tests/**'
]
lint.select = [
    "I", # isort
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "C", # complexity
    "N", # pep8-naming
    "RUF", # ruff
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "PIE", # flake8-pie
    "PT", # flake-pytest-style
]
